--- a/views/index.ejs
+++ b/views/index.ejs
@@ -630,9 +630,9 @@
 
       /* Responsive Design */
       @media (max-width: 768px) {
-        body{
-          overflow-y: hidden;
-        }
+        /* body{
+          /* overflow-y: hidden; */
+        /*} */
         .container {
           padding: 1.5rem;
         }
