--- a/views/game.ejs
+++ b/views/game.ejs
@@ -430,6 +430,13 @@
           transition-duration: 0.01ms !important;
         }
       }
+
+
+      .square.selected {
+  outline: 3px solid #22c55e; /* green highlight */
+  box-shadow: inset 0 0 8px #22c55e;
+}
+
     </style>
   </head>
   <body>
