--- a/views/game.ejs
+++ b/views/game.ejs
@@ -13,7 +13,7 @@
       }
 
       body {
-        background: #0a0a0a;
+        background: #0f0e0e;
         position: relative;
         /* overflow: hidden; */
       }
