--- a/views/index.ejs
+++ b/views/index.ejs
@@ -322,9 +322,20 @@
       }
 
       @media (max-width: 480px) {
-        /* .hero {
-          height: 90vh;
-        } */
+
+        .hero{
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+         }
+        
+         .container{
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+         }
         .chessboard-preview {
           max-width: 280px;
         }
