--- a/views/game.ejs
+++ b/views/game.ejs
@@ -166,6 +166,43 @@
         }
       }
 
+      @keyframes shake {
+  0% { transform: translate(0px, 0px); }
+  20% { transform: translate(-5px, 0px); }
+  40% { transform: translate(5px, 0px); }
+  60% { transform: translate(-5px, 0px); }
+  80% { transform: translate(5px, 0px); }
+  100% { transform: translate(0px, 0px); }
+}
+
+.piece.shake {
+  animation: shake 0.5s;
+}
+
+/* Highlight square or piece in red */
+.check {
+  animation: shake 0.5s;
+  background-color: #f87171 !important; /* red background for square */
+  color: #fff; /* white text on red */
+}
+
+/* Shake animation */
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+
+
       .chessboard:hover {
         box-shadow: inset 0 0 0 2px rgba(14, 165, 233, 0.4),
           0 15px 40px rgba(0, 0, 0, 0.6);
